# vigil

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  config.yml  config.yml.example  conftest.py  pyproject.toml
src/vigil/: __init__.py  config.py  crawl.py  logging.py
src/vigil/api/: __init__.py  app.py
src/vigil/api/routes/: __init__.py  incidents.py  search.py  sources.py
src/vigil/core/: monitoring.py  pipeline.py  scheduler.py
src/vigil/dashboard/: __init__.py  app.py
src/vigil/dashboard/static/css/: dashboard.css
src/vigil/dashboard/static/js/: charts.js  dashboard.js
src/vigil/dashboard/templates/: error.html  incident.html  incidents.html  index.html  layout.html  search.html
src/vigil/data_collection/: __init__.py  base.py  content_extractor.py  crawler.py  frontier.py  scrapper.py
src/vigil/database/: __init__.py  connection.py  models.py  queries.py  url_tracking.py
src/vigil/model/: __init__.py  data_prep.py  model_viz.py  training.py
src/vigil/scripts/: monitor.py  scheduler.py  ui.py  workflow.py
src/vigil/storage/: __init__.py  data_store.py
src/vigil/tools/: __init__.py  classify.py  crawl.py  label_articles.py  preprocess.py  train_model.py  visualize.py
src/vigil/utils/: text_utils.py  time_utils.py  url_utils.py
tests/: conftest.py
tests/unit/: conftest.py  test_base_crawler.py  test_frontier.py
tests/utils/: test_text_utils.py  test_time_utils.py  test_url_utils.py
