[project]
name = "vigil"
version = "0.1.0"
description = "A framework to collect, analyze and display cyber incident data with visualization"
readme = "README.md"
authors = [
    { name = "waseemR02", email = "waseem.riaz.9999@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "bs4>=0.0.2",
    "pyyaml>=6.0",
    "requests>=2.32.3",
]

[project.scripts]
vigil = "vigil:main"
vigil-crawl = "vigil.crawl:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
