[project]
name = "vigil"
version = "0.1.0"
description = "A framework to collect, analyze and display cyber incident data with visualization"
readme = "README.md"
authors = [
    { name = "waseemR02", email = "waseem.riaz.9999@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "bs4>=0.0.2",
    "datetime>=5.5",
    "pyyaml>=6.0",
    "requests>=2.32.3",
    "rich>=13.9.4",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
]

[project.scripts]
vigil = "vigil:main"
vigil-crawl = "vigil.tools.crawl:main"
vigil-label = "vigil.tools.label_articles:main"
vigil-prep = "vigil.tools.preprocess:main"
vigil-train = "vigil.tools.train_model:main"
vigil-classify = "vigil.tools.classify:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
